"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2008-01-18	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-02-ACT-03-05:
	  prsim: 'pending' command to check if event is already
		pending on node.  Also comes with debug mode.  Tested.
	  Now allow interpreter to accept comments like "#foobar".


2008-01-17	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-02-ACT-03-04:
	  Grammar update, allow empty instance management clauses 
		in conditionals, to make it easy to comment out bodies.  


	* HACKT-00-01-04-main-00-82-02-ACT-03-03:
	  Bug fix: forgot top-level spec-directives in cflat
	  Added support for loop and conditional spec directives.  
		Includes several new test cases.  
	  Next: cleanup, refactor loop/conditional code.


2008-01-16	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-02-ACT-03-02-merged-prsim-08-29:
	  Major child branch merge:
	  Mostly prsim additions and enhancements, no regressions.  
		Support for weak rules (can be disabled).
		Better support for non-QDI (synchronous) simulation, 
			mostly with unstable-dequeue mode.  
		VPI (verilog PLI) interface added, with plug-in shared lib.
		has undergone a *decent* amount of testing, as the audit
			trail of bug fixes shows.
	  Includes a few critical fixes, high priority for trunk.


2008-01-16	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-02-ACT-03-01-prsim-08-29:
	  Critical util library bug fix in util/packed_array.tcc, 
		see util/ChangeLog.   Symptom was botched printing of
		3D array indices, due to bad index_to_key lookup.  
	  Many test cases added to parser/connect.
	  This patch is appropriate for main trunk.  


2008-01-15	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-02-ACT-03-01-prsim-08-28:
	  prsim: new commands