@@ -1,5 +1,11 @@
 # "src/util/ChangeLog"
-#	$Id: ChangeLog,v 1.93.4.1 2008/01/17 01:32:35 fang Exp $
+#	$Id: ChangeLog,v 1.93.4.2 2008/01/18 21:12:35 fang Exp $
+
+2008-01-17	David Fang		<fangism@users.sourceforge.net>
+
+	* HACKT-00-01-04-main-00-82-02-ACT-03-06:
+	  memory/free_list.h: more efficient set uniqueness check.
+
 
 2008-01-16	David Fang		<fangism@users.sourceforge.net>
 
